# slint-demo

./: Cargo.toml  Makefile  Readme.md
breathe/: Cargo.toml  Readme.md  index.html
breathe/src/: lib.rs  main.rs
breathe/ui/: main.slint
calculator/: Calculator.md  Cargo.toml
calculator/src/: main.rs
calculator/ui/: main.slint
src/: main.rs  repository.rs
ui/: main.slint
ui/components/: common.slint  global.slint  left.slint  list.slint
user/: Cargo.toml  User.md  build.rs
user/migrations/: 20250827010137_create_users.sql
user/src/: main.rs  model.rs
user/ui/components/: add.slint  content.slint  head.slint
