[package]
name = "breathe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
name = "breathe_lib"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["console"] }
# console_error_panic_hook = "0.1.5"
getrandom = { version = "0.2.2", features = ["js"] }
