[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
slint = "1.13.1"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
slint-build = "1.13.1"
winres = "0.1.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.winres]
window-subsystem = "windows"
icon = "ui/imgs/app.ico"
